# news-crawler

./: (1)오분류처리.ipynb  (2)train_test데이터나누기.ipynb  (3)news_classifier.ipynb  .gitignore  .style.yapf  README.md  cli.py  crawl.py  crawl_test.py  pyproject.toml  pytest.ini  update.sh
.github/workflows/: autoupdate.yml
