[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["kkyueing <kkyueing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.0"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pylint = "^2.4.4"
pytest = "^5.4.1"
pytest-watch = "^4.2.0"
flake8 = "^3.7.9"
flake8-mypy = "^17.8.0"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.6.1"
isort = "^4.3.21"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
